# StoreOrders

./: .env.example  .gitignore  Cargo.toml  README.MD  README.md  StoreOrders.sln  build.bat  index.html  index.php  login.php  openapi.json  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.bruno/Store Orders API/: bruno.json  collection.bru
.bruno/Store Orders API/Authentication/: Admin Create User.bru  Admin Reset User Password.bru  Forgot Password.bru  Get Users.bru  Me.bru  Refresh JWT token.bru  Reset Password.bru  User login.bru  User registration.bru
.bruno/Store Orders API/Categories/: Create a new category.bru  Get all categories.bru  Get category by ID.bru  Update category.bru
.bruno/Store Orders API/Orders/: Add item to cart.bru  Create a new order.bru  Get order by ID.bru  Get store orders.bru  Get user orders.bru  Update order status.bru
.bruno/Store Orders API/Products/: Create a new product.bru  Get all products.bru  Get product by ID.bru  Update product.bru
.bruno/Store Orders API/environments/: Development server.bru
.junie/: guidelines.md
StoreOrders.Core/: StoreOrders.Core.csproj
StoreOrders.Core/Constants/: ApplicationConfiguration.cs  ApplicationData.cs  CrashHandler.cs  Directories.cs  Files.cs
StoreOrders.Web/: Program.cs  StoreOrders.Web.csproj  appsettings.Development.json  appsettings.json
StoreOrders.Web/Components/: App.razor  _Imports.razor
StoreOrders.Web/Components/Pages/: Home.razor
StoreOrders.Web/Controllers/: ServerController.cs
StoreOrders.Web/Properties/: launchSettings.json
StoreOrders.Web/wwwroot/css/: home.css  home.css.map  main.css  main.css.map
StoreOrders.Web/wwwroot/sass/: home.scss  main.scss  theme.scss
assets/css/: dashboard.css  dashboard.min.css  fonts.css  fonts.min.css  input.css  input.min.css  main.css  main.min.css  nav.css  nav.min.css  scrollbar.css  scrollbar.min.css  theme.css  theme.min.css
assets/js/: authentication.min.js  inputs.js  inputs.min.js  nav.js  nav.min.js  orders.js  orders.min.js
assets/php/: ActiveDirectory.inc.php
assets/php/components/: nav.php  topbar.php
pages/error/: 404.php
pages/orders/: new.php
scripts/: app.js  dev.js
src/: main.tsx
src-actix/: asset_endpoint.rs  build.rs  data_database_connection.rs  data_orders.rs  db_orders.rs  lib.rs  main.rs  traits.rs  upload.rs
src-actix/auth/: auth_data.rs  auth_db.rs  auth_endpoint.rs  auth_middleware.rs  disabled_users.rs  email_service.rs  jwt.rs  mod.rs
src-actix/categories/: categories_data.rs  categories_db.rs  categories_endpoint.rs  mod.rs
src-actix/orders/: mod.rs  orders_data.rs  orders_db.rs  orders_endpoint.rs  store_order_status.rs
src-actix/orders/inventory/: inventory_data.rs  inventory_db.rs  mod.rs
src-actix/products/: mod.rs  products_data.rs  products_db.rs  products_endpoint.rs
src-actix/stores/: mod.rs  stores_data.rs  stores_db.rs  stores_endpoint.rs
src/assets/components/: LoginForm.tsx  Navigation.tsx  NavigationDropdown.tsx
src/assets/images/: MardensLogo.svg.tsx  Pants.svg.tsx  SquareBackdrop.svg.tsx
src/assets/pages/: CatalogPage.tsx  EditCatalogPage.tsx  OrderHistoryPage.tsx  PageNotFound.tsx
src/assets/providers/: AuthProviderProvider.tsx  CartProvider.tsx  ThemeProvider.tsx
src/assets/scss/: index.scss
src/assets/ts/: Orders.ts  Products.ts  Stores.ts  Theme.ts  authentication.ts
src/components/: ImageCropModal.tsx  ImageUpload.tsx
src/components/auth/: ForgotPassword.tsx  Login.tsx  ProtectedRoute.tsx  ResetPassword.tsx
src/components/cart/: CartSidebar.tsx
src/components/extension/: Input.tsx  Textarea.tsx
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
src/components/modals/: CreateCategoryModal.tsx  CreateProductModal.tsx  CreateUserModal.tsx  DeleteCategoryModal.tsx  DeleteProductModal.tsx  DeleteUserModal.tsx  DisableUserModalModal.tsx  EditCategoryModal.tsx  EditProductModal.tsx  EditUserModal.tsx  HelpModal.tsx  ResetPasswordModal.tsx
src/components/pages/: Cart.tsx  Categories.tsx  Dashboard.tsx  OrderConfirmation.tsx  (+4 more)
src/providers/: AuthProvider.tsx  CartProvider.tsx  LayoutProvider.tsx  MessageProvider.tsx
src/utils/: api.ts  types.ts
templates/: order-manifest-template.html.tera
tools/filemaker_import_tool/: Cargo.toml
tools/filemaker_import_tool/src/: main.rs
(+12 files in other folders)
