[package]
name = "store-orders"
version = "0.0.0"
edition = "2021"
build = "src-actix/build.rs"

[[bin]]
name = "store-orders"
path = "src-actix/main.rs"

[dependencies]
actix-web = { version = "4.9.0" }
actix-ws = "0.3.0"
actix-files = "0.6.6"
futures-util = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125" }
env_logger = "0.11.5"
include_dir = "0.7.4"
walkdir = "2.5.0"
awc = "3.1.0"
log = "0.4.22"
sqlx = { version = "0.8.2", features = ["default", "mysql", "sqlite", "derive", "chrono", "runtime-tokio"] }
reqwest = { version = "0.12.9", features = ["json"] }


[build-dependencies]
cargo-watch = "8.5.2"
include_dir = "0.7.4"
walkdir = "2.5.0"
npm_rs = "1.0.0"