[workspace]
members = ["tools/filemaker_import_tool"]

[package]
name = "store_orders"
version = "0.1.7"
edition = "2021"
authors = ["Drew Chase (Work) <dcmanproductions@gmail.com>"]
build = "src-actix/build.rs"

[[bin]]
name = "store_orders"
path = "src-actix/main.rs"

[lib]
name = "store_orders_lib"
path = "src-actix/lib.rs"
crate-type = ["lib"]

[dependencies]
actix-web = { version = "4.9.0" }
actix-files = { version = "0.6.6" }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.125" }
serde_hash = { version = "0.1.3" }
pretty_env_logger = "0.5.0"
include_dir = "0.7.4"
walkdir = "2.5.0"
log = "0.4.22"
anyhow = "1.0.95"
vite-actix = { version = "0.2.6" }
sqlx = { version = "0.8.6", features = ["mysql", "sqlx-mysql", "macros", "derive", "runtime-tokio", "chrono", "rust_decimal"] }
chrono = { version = "0.4.41", features = ["now", "serde"] }
rand = "0.9.2"
rust_decimal = { version = "1.36.0", features = ["serde"] }
# JWT and authentication dependencies
jsonwebtoken = "9.3.0"
bcrypt = "0.17.0"
actix-web-httpauth = "0.8.2"
# Email dependencies for password reset
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
# Mardens Inc. Libraries
database-common-lib = { git = "https://github.com/Mardens-Inc/database-common-lib.git" }
tokio = "1.46.0"
uuid = { version = "1.17.0", features = ["v4"] }
tera = { version = "1.20.0", features = [] }


[build-dependencies]
include_dir = "0.7.4"
walkdir = "2.5.0"